2008-01-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Set default value for "/network/use_gnome_auth_manager" to FALSE

	* pixmaps/Makefile.am:
	* pixmaps/desktop.xpm:
	* pixmaps/exec.xpm:
	* pixmaps/ftp_connect.xpm:
	* pixmaps/ftp_disconnect.xpm:
	* pixmaps/ftp.xpm:
	* pixmaps/home.xpm:
	* pixmaps/key.xpm:
	* pixmaps/lock.xpm:
	* pixmaps/mkdir.xpm:
	* pixmaps/server.xpm:
	* pixmaps/smb-computer.xpm:
	* pixmaps/smb-network.xpm:
	* src/imageloader.cc:
	* src/imageloader.h:
	Removed unused pixmaps

	* src/gnome-cmd-user-actions.cc:
	Made "view.home" working on non-home connections too

2008-01-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Added gnome_cmd_file_get_dirname()

	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	Fix for memory leak in tag handling

	* src/tags/gnome-cmd-tags-file.cc:
	Set File.Path tag properly

	* src/gnome-cmd-con-dialog.cc:
	Set password entry hidden

	* src/tags/gnome-cmd-tags-file.cc:
	Set File.Format tag to "Folder" for directories

2008-01-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	Simplified gnome_cmd_file_get_extension()

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Define SHIFT+F4 binding as user definable (file.edit_new_doc)

2008-01-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Fix for starting the new document

2008-01-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Fixed the size of text array (text[3] -> text[4]).
	That fixes crashes #346286, #424447, #447882, #467058.

2008-01-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer:
	Rename libgviewer -> intviewer

2008-01-02  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-xfer.cc:
	Fix for problem #353889 (disappearing file after failed move (F6))

2008-01-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Fix for crash on gentoo
