@@ -1,3 +1,9 @@
+2008-01-10  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-con-device.cc:
+	* src/gnome-cmd-con-ftp.cc:
+	Add missing "umount" cross to close-connection toolbar button
+
 2008-01-09  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-data.cc:
